# Nexus

./: .gitignore  .gitmodules  CMakeLists.txt  Nexus.sln  README.md  premake5.lua
.github/workflows/: cmake.yml  msbuild.yml
Nexus/: CMakeLists.txt  Nexus.h
Nexus/Sources/: Nexus.hpp
Nexus/Sources/Devices/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
Nexus/Sources/Engine/: Engine.cpp  Engine.hpp
Nexus/Sources/Game/: Game.cpp  Game.hpp
Nexus/Sources/Graphics/Sprite/: Sprite.cpp  Sprite.hpp
Nexus/Sources/Maths/Vec2/: Vec2.cpp
Nexus/Sources/Sprite/: Sprite.cpp  Sprite.hpp
Nexus/Sources/Types/Vec2/: Vec2.cpp  Vec2.hpp
Nexus/include/: Nexus.h
Nexus/include/Nexus/: Configuration.h  Event.h  Game.h  Keyboard.h  Log.h  Renderer.h  State.h  Window.h
Nexus/include/Nexus/Graphics/: Renderer.h  StateRenderer.h
Nexus/include/Nexus/Math/: Color.h  FloatRect.h  Rect.h  Vec2.h
Nexus/include/Nexus/Window/: Keyboard.h  Window.h
Nexus/src/: Event.cpp  Game.cpp  Keyboard.cpp  Log.cpp  Log.h  Print.cpp  Print.h  Renderer.cpp  Window.cpp
Nexus/src/Graphics/: Renderer.cpp  StateRenderer.cpp
Nexus/src/Math/: Color.cpp  FloatRect.cpp  Rect.cpp  Vec2.cpp
Nexus/src/Window/: Event.cpp  Keyboard.cpp  Window.cpp
Sandbox/: CMakeLists.txt
Sandbox/Sources/: Main.cpp
Sandbox/Sources/Player/: Player.cpp  Player.hpp
Sandbox/src/: Main.cpp  MenuState.h  PlayState.h  Sandbox.h
scripts/: DownloadSDL.ps1  GenerateProjects.bat
